make it build RtMidiWrapper. It still fails to load library yet...

--- a/rtmidi-javacpp/build.gradle
+++ b/rtmidi-javacpp/build.gradle
@@ -15,9 +15,17 @@ repositories {
 
 ext.targetArtifactName = "dev.atsushieno:rtmidi-javacpp"
 
+configurations {
+    baseline
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+}
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
     api "org.bytedeco:javacpp:1.5.8"
     javacppPlatform "org.bytedeco:javacpp-platform:1.5.8"
     javacppPlatform "$targetArtifactName:$version:linux-x86"
@@ -27,6 +35,8 @@ dependencies {
     javacppPlatform "$targetArtifactName:$version:windows-x86"
     javacppPlatform "$targetArtifactName:$version:windows-x86_64"
     testRuntimeOnly "org.bytedeco:javacpp:1.5.8:$javacppPlatform"
+    testImplementation platform('org.junit:junit-bom:5.9.1')
+    //testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
@@ -65,15 +75,16 @@ jar {
 
 javadoc {
     failOnError = false
+    //from javadoc.destinationDir
 }
 
-tasks.register('javadocJar', Jar) {
-    dependsOn javadoc
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
     from javadoc.destinationDir
 }
 
-tasks.register('sourcesJar', Jar) {
-    dependsOn classes
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
     from sourceSets.main.allSource
 }
 
@@ -81,3 +92,52 @@ artifacts {
     archives javadocJar
     archives sourcesJar
 }
+
+/*
+// check API breakage
+tasks.register("japicmp", me.champeau.gradle.japicmp.JapicmpTask) {
+    oldArchives.from(configurations.baseline)
+    newArchives.from(files(jar.archivePath))
+    onlyModified = true
+    failOnModification = true
+    txtOutputFile = file("$buildDir/reports/japi.txt")
+    ignoreMissingClasses = true
+    includeSynthetic = true
+}
+
+check.dependsOn(japicmp)
+*/
+
+// publisher settings
+publishing {
+    publications.all {
+        from components.java
+
+        pom {
+            name.set('rtmidi-jna')
+            description.set('rtmidi JNA binding with prebuilt binaries')
+            url.set('https://github.com/atsushieno/rtmidi-jna')
+            scm {
+                url.set('https://github.com/atsushieno/rtmidi-jna')
+            }
+            licenses {
+                license {
+                    name.set('the MIT License')
+                    url.set('https://github.com/atsushieno/rtmidi-jna/blob/main/LICENSE')
+                }
+            }
+            developers {
+                developer {
+                    id.set('atsushieno')
+                    name.set('Atsushi Eno')
+                    email.set('atsushieno@gmail.com')
+                }
+            }
+        }
+    }
+}
+
+// keep it as is. It is replaced by CI release builds
+signing {}
+
+apply from: "${rootDir}/publish-module.gradle"
