--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,14 @@ group = 'dev.atsushieno'
 version = '0.1.0-SNAPSHOT'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    implementation project(':rtmidi-javacpp')
+    // IDEA is not capable of supporting autocompleting generated rtmidi-javacpp API...
+    //implementation project(':rtmidi-javacpp')
+    implementation 'dev.atsushieno:rtmidi-javacpp:0.1.0'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
