make it publish rtmidi-javacpp-platform packages too.

--- a/publish-module.gradle
+++ b/publish-module.gradle
@@ -13,9 +13,17 @@ tasks.register('sourceJar', Jar) {
 
 publishing {
     publications {
-        maven(MavenPublication) {
-            artifact(javadocJar)
-            artifact(sourceJar)
+        mavenJava(MavenPublication) {
+            from components.java
+            artifacts = [jar, javacppJar, javadocJar, sourcesJar] + javacppBuild.existingArtifacts(configurations.javacppPlatform)
+            pom pomClosure
+        }
+        mavenJavacppPlatform(MavenPublication) {
+            groupId project.group
+            artifactId project.name + "-platform"
+            artifacts = [javacppPlatformJar, javacppPlatformJavadocJar, javacppPlatformSourcesJar]
+            pom pomClosure
+            pom.withXml javacppBuild.xmlAction(configurations.javacppPlatform)
         }
     }
 
