--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     // IDEA is not capable of supporting autocompleting generated rtmidi-javacpp API...
     //implementation project(':rtmidi-javacpp')
     implementation 'dev.atsushieno:rtmidi-javacpp:0.1.0'
+    //implementation 'dev.atsushieno:rtmidi-javacpp-platform:0.1.0'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
