copy some javacpp-preset sample project build.gradle fragment here in samples.
This does not really help resolving dependencies to incorrect platform-
specific libs e.g. it tries to resolve rtmidi-javacpp-macos-x86_64 even
on linux-x86_64 host.
Looks like https://github.com/bytedeco/gradle-javacpp/issues/24 is a
relevant issue, but it seems unresolved forever.

--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.bytedeco.gradle-javacpp-build' version "1.5.8" apply false
+    id 'java-library'
 }
 
 group = 'dev.atsushieno'
