--- a/samples/app/build.gradle
+++ b/samples/app/build.gradle
@@ -1,25 +1,36 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id 'org.bytedeco.gradle-javacpp-platform' version '1.5.8'
 }
 
 group = 'dev.atsushieno'
-version = '0.1.0-SNAPSHOT'
+version = '0.1.0'
 
 repositories {
     mavenLocal()
     mavenCentral()
 }
 
-dependencies {
-    // IDEA is not capable of supporting autocompleting generated rtmidi-javacpp API...
-    //implementation project(':rtmidi-javacpp')
-    //implementation 'dev.atsushieno:rtmidi-javacpp:0.1.0'
-    implementation 'dev.atsushieno:rtmidi-javacpp-platform:0.1.0'
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+ext {
+    // This does not really help resolving dependencies to incorrect platform-specific libs
+    //  e.g. it tries to resolve rtmidi-javacpp-macos-x86_64 even on linux-x86_64 host.
+    // Looks like https://github.com/bytedeco/gradle-javacpp/issues/24 is a relevant issue
+    //  but it seems unresolved forever.
+    //javacppPlatform = 'linux-x86_64' // defaults to Loader.getPlatform()
 }
 
-test {
-    useJUnitPlatform()
+dependencies {
+    api "dev.atsushieno:rtmidi-javacpp-platform:0.1.0"
+    testImplementation 'junit:junit:4.13.2'
 }
+
+/*
+// Let's create a standalone "uber JAR" to see what we get in it
+jar {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE // allow duplicates
+    manifest.attributes "Main-Class": "org.bytedeco.javacv.samples.Demo"
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+*/
