--- a/.github/workflows/actions_package_reg.yml
+++ b/.github/workflows/actions_package_reg.yml
@@ -20,7 +20,7 @@ jobs:
         sudo apt-get update
         echo y | sudo apt-get install doxygen cmake ninja-build libasound2-dev libjack-jackd2-dev
     - name: set up JDK 17
-    - uses: actions/setup-java@v2
+      uses: actions/setup-java@v2
       with:
         distribution: 'temurin'
         java-version: '17'
