fix build.gradle too.

--- a/rtmidi-javacpp/build.gradle
+++ b/rtmidi-javacpp/build.gradle
@@ -49,7 +49,7 @@ tasks.withType(org.bytedeco.gradle.javacpp.BuildTask).configureEach {
 }
 
 if(System.properties["os.name"].startsWith("Windows")) {
-    javacppBuildCommand { buildCommand = ['powershell', 'build.ps'] }
+    javacppBuildCommand { buildCommand = ['powershell', 'build.ps1'] }
 } else {
     javacppBuildCommand { buildCommand = ['bash', 'build.sh'] }
 }
