--- a/.github/workflows/actions_package_reg.yml
+++ b/.github/workflows/actions_package_reg.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macos-12, windows-latest]    
+        os: [ubuntu-20.04, macos-12] #, windows-latest]
     steps:
     - name: checkout # it's duplicate, but it's too annoying to split build steps just to avoid it
       uses: actions/checkout@v3
