--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,6 +4,8 @@ on:
   push:
   pull_request:
   workflow_dispatch:
+  create:
+    tags:
 
 jobs:
   build_jar:
@@ -14,26 +16,56 @@ jobs:
       matrix:
         os: [ubuntu-20.04, macos-12] #, windows-latest]
     steps:
-    - name: checkout # it's duplicate, but it's too annoying to split build steps just to avoid it
-      uses: actions/checkout@v3
-      with:
-        submodules: true
-    - name: apt update (on Linux)
-      if: matrix.os == 'ubuntu-20.04'
-      run: |
-        sudo apt-get update
-        echo y | sudo apt-get install doxygen cmake ninja-build libasound2-dev libjack-jackd2-dev
-    - name: set up JDK 17
-      uses: actions/setup-java@v2
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-    - name: build jar
-      run:
-         ./gradlew --warning-mode all build
-    - name: upload artifact - Jar
-      if: success()
-      uses: actions/upload-artifact@v2
-      with:
-        name: rtmidi-javacpp-jars
-        path: rtmidi-javacpp/build/libs/*.jar
+      - name: checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+      - name: apt update (on Linux)
+        if: matrix.os == 'ubuntu-22.04'
+        run: |
+          sudo apt-get update
+          echo y | sudo apt-get install doxygen cmake ninja-build libasound2-dev libjack-jackd2-dev
+      - name: set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      # Only for release tags
+      - name: setup gpg necessities
+        if: startsWith(github.ref, 'refs/tags/')
+        run: sudo bash -c "echo '$GPG_KEY_CONTENTS' | base64 -d > '$WORKSPACE/$SIGNING_SECRET_KEY_RING_FILE'"
+        env:
+          WORKSPACE: ${{ github.workspace }}
+          GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
+          SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
+      - name: rewrite build.gradle to require signing
+        if: startsWith(github.ref, 'refs/tags/')
+        run: sed -i "s/signing {}/signing { sign(publishing.publications) }/" rtmidi-javacpp/build.gradle
+
+      # build or publish, depending on whether it is for release tags or not
+      - name: build (ONLY FOR NON-RELEASES)
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+        run: ./gradlew --warning-mode all build
+      - name: publish (ONLY FOR NEW RELEASE TAGS)
+        if: startsWith(github.ref, 'refs/tags/')
+        run:
+          ./gradlew --warning-mode all publish
+        env:
+          OSSRH_USERNAME: atsushieno
+          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
+          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
+          SIGNING_SECRET_KEY_RING_FILE: ${{ format('{0}/{1}', github.workspace, secrets.SIGNING_SECRET_KEY_RING_FILE) }}
+      - name: upload artifact - Jar
+        if: success()
+        uses: actions/upload-artifact@v2
+        with:
+          name: rtmidi-javacpp-jars
+          path: rtmidi-javacpp/build/libs/*.jar
+        # Update API reference,
+      - name: deploy to GitHub Pages
+        if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
+        uses: JamesIves/github-pages-deploy-action@4.1.2
+        with:
+          branch: gh-pages
+          folder: rtmidi-javacpp/build/dokka/html
