--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -38,8 +38,11 @@ jobs:
           WORKSPACE: ${{ github.workspace }}
           GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
           SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
-      - name: rewrite build.gradle to require signing
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: rewrite build.gradle to require signing on awkward OS
+        if: startsWith(github.ref, 'refs/tags/') && matrix.os == 'macos-12'
+        run: sed -i "" "s/signing {}/signing { sign(publishing.publications) }/" rtmidi-javacpp/build.gradle
+      - name: rewrite build.gradle to require signing on standard OS
+        if: startsWith(github.ref, 'refs/tags/') && matrix.os != 'macos-12'
         run: sed -i "s/signing {}/signing { sign(publishing.publications) }/" rtmidi-javacpp/build.gradle
 
       # build or publish, depending on whether it is for release tags or not
@@ -49,7 +52,7 @@ jobs:
       - name: publish (ONLY FOR NEW RELEASE TAGS)
         if: startsWith(github.ref, 'refs/tags/')
         run:
-          ./gradlew --warning-mode all publish
+          ./gradlew --warning-mode all build dokkaHtml publish
         env:
           OSSRH_USERNAME: atsushieno
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
