--- a/publish-root.gradle
+++ b/publish-root.gradle
@@ -2,6 +2,7 @@
 // Create variables with empty default values
 ext["ossrhUsername"] = ''
 ext["ossrhPassword"] = ''
+ext["ossrhStagedRepositoryIds"] = ''
 ext["signing.keyId"] = ''
 ext["signing.password"] = ''
 ext["signing.secretKeyRingFile"] = ''
@@ -16,6 +17,7 @@ if (secretPropsFile.exists()) {
 // Use system environment variables
 ext["ossrhUsername"] = System.getenv('OSSRH_USERNAME') ?: ext["ossrhUsername"]
 ext["ossrhPassword"] = System.getenv('OSSRH_PASSWORD') ?: ext["ossrhPassword"]
+ext["ossrhStagedRepositoryIds"] = System.getenv('OSSRH_STAGED_REPOSITORY_IDS') ?: ext["ossrhStagedRepositoryIds"]
 ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID') ?: ext["signing.keyId"]
 ext["signing.password"] = System.getenv('SIGNING_PASSWORD') ?: ext["signing.password"]
 ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_SECRET_KEY_RING_FILE') ?: ext["signing.secretKeyRingFile"]
