--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,8 +14,9 @@ jobs:
     outputs:
       repository_id: ${{ steps.create.outputs.repository_id }}
     steps:
-      - name: create OSSRH Repository for aggregated pushes
-        uses: nexus-actions/create-nexus-staging-repo@v2
+      - name: create OSSRH Repository for aggregated pushes (ONLY FOR RELEASES)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: nexus-actions/create-nexus-staging-repo@v1.2
         with:
           username: atsushieno
           password: ${{ secrets.OSSRH_PASSWORD }}
