--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,8 +4,6 @@ on:
   push:
   pull_request:
   workflow_dispatch:
-  create:
-    tags:
 
 jobs:
   create_staging_repository:
@@ -30,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, macos-12] #, windows-latest]
+        os: [ubuntu-22.04, macos-12, windows-latest]
     steps:
       - name: checkout
         uses: actions/checkout@v3
