dump Windows build, add arm64 osx build.

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, macos-13, macos-13-xlarge, windows-latest]
+        os: [ubuntu-22.04, macos-13, macos-13-xlarge] #, windows-latest]
     steps:
       - name: checkout
         uses: actions/checkout@v3
