--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -39,6 +39,9 @@ jobs:
         run: |
           sudo apt-get update
           echo y | sudo apt-get install doxygen cmake ninja-build libasound2-dev libjack-jackd2-dev
+      - name: setup Windows developer tools for C++
+        if: matrix.os == 'windows-latest'
+        uses: ilammy/msvc-dev-cmd@v1
       - name: set up JDK 17
         uses: actions/setup-java@v2
         with:
