--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,7 +13,7 @@ jobs:
       repository_id: ${{ steps.create.outputs.repository_id }}
     steps:
       - name: create OSSRH Repository for aggregated pushes (ONLY FOR RELEASES)
-        if: startsWith(github.ref, 'refs/tags/')
+        if: false #startsWith(github.ref, 'refs/tags/')
         uses: nexus-actions/create-nexus-staging-repo@v1.2
         with:
           username: atsushieno
