--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -48,9 +48,16 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       # Only for release tags
-      - name: setup gpg necessities
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: setup gpg necessities on Unix-y OS
+        if: startsWith(github.ref, 'refs/tags/') && !startsWith(matrix.os, 'windows')
         run: sudo bash -c "echo '$GPG_KEY_CONTENTS' | base64 -d > '$WORKSPACE/$SIGNING_SECRET_KEY_RING_FILE'"
+        env:
+          WORKSPACE: ${{ github.workspace }}
+          GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
+          SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
+      - name: setup gpg necessities on Windows
+        if: startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'windows')
+        run: [System.Text.Encoding]::Unicode.GetString([System.Convert]::FromBase64String("$GPG_KEY_CONTENTS")) | Out-File '$WORKSPACE/$SIGNING_SECRET_KEY_RING_FILE'
         env:
           WORKSPACE: ${{ github.workspace }}
           GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
