--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -57,7 +57,8 @@ jobs:
           SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
       - name: setup gpg necessities on Windows
         if: startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'windows')
-        run: [System.Text.Encoding]::Unicode.GetString([System.Convert]::FromBase64String("$GPG_KEY_CONTENTS")) | Out-File '$WORKSPACE/$SIGNING_SECRET_KEY_RING_FILE'
+        run: |
+          [System.Text.Encoding]::Unicode.GetString([System.Convert]::FromBase64String("$GPG_KEY_CONTENTS")) | Out-File '$WORKSPACE/$SIGNING_SECRET_KEY_RING_FILE'
         env:
           WORKSPACE: ${{ github.workspace }}
           GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
