--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,8 +13,8 @@ jobs:
       repository_id: ${{ steps.create.outputs.repository_id }}
     steps:
       - name: create OSSRH Repository for aggregated pushes (ONLY FOR RELEASES)
-        if: false #startsWith(github.ref, 'refs/tags/')
-        uses: nexus-actions/create-nexus-staging-repo@v1.2
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: nexus-actions/create-nexus-staging-repo@main # I do not trust their fixed versions work better
         with:
           username: atsushieno
           password: ${{ secrets.OSSRH_PASSWORD }}
@@ -58,7 +58,7 @@ jobs:
       - name: setup gpg necessities on Windows
         if: startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'windows')
         run: |
-          [System.Text.Encoding]::Unicode.GetString([System.Convert]::FromBase64String("$GPG_KEY_CONTENTS")) | Out-File '$WORKSPACE/$SIGNING_SECRET_KEY_RING_FILE'
+          [System.Text.Encoding]::Unicode.GetString([System.Convert]::FromBase64String("$Env:GPG_KEY_CONTENTS")) | Out-File '$Env:WORKSPACE/$Env:SIGNING_SECRET_KEY_RING_FILE'
         env:
           WORKSPACE: ${{ github.workspace }}
           GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
