--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,12 +14,13 @@ jobs:
     steps:
       - name: create OSSRH Repository for aggregated pushes (ONLY FOR RELEASES)
         if: startsWith(github.ref, 'refs/tags/')
-        uses: nexus-actions/create-nexus-staging-repo@main # I do not trust their fixed versions work better
-        with:
-          username: atsushieno
-          password: ${{ secrets.OSSRH_PASSWORD }}
-          staging_profile_id: ${{ secrets.OSSRH_STAGING_PROFILE_ID }}
-          description: ${{ github.repository }}/${{ github.workflow }}#${{ github.run_number }}
+        run: |
+          STAGING_REPOSITORY_ID=`curl -s --request POST -u "${{ secrets.OSSRH_USERNAME}}:${{ secrets.OSSRH_PASSWORD }}" \
+            --url https://oss.sonatype.org/service/local/staging/profiles/"${{ secrets.OSSRH_STAGING_PROFILE_ID }}"/start \
+            --header 'Accept: application/json' \
+            --header 'Content-Type: application/json' \
+            --data '{ "data": {"description" : "'"${{ github.repository }}/${{ github.workflow }}#${{ github.run_number }}"'"} }'`
+          echo "repository_id=$STAGING_REPOSITORY_ID" >> $GITHUB_OUTPUT
 
   build_jar:
     name: 'build on ${{ matrix.os }}'
