--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,8 +15,8 @@ jobs:
       - name: create OSSRH Repository for aggregated pushes (ONLY FOR RELEASES)
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          echo "repository_id=`curl -s --request POST -u "${{ secrets.OSSRH_USERNAME}}:${{ secrets.OSSRH_PASSWORD }}"   --url https://oss.sonatype.org/service/local/staging/profiles/"${{ secrets.OSSRH_STAGING_PROFILE_ID }}"/start    --header 'Accept: application/json'    --header 'Content-Type: application/json'    --data '{ "data": {"description" : "'"${{ github.repository }}/${{ github.workflow }}#${{ github.run_number }}"'"} }'`"
-          echo "repository_id=`curl -s --request POST -u "${{ secrets.OSSRH_USERNAME}}:${{ secrets.OSSRH_PASSWORD }}"   --url https://oss.sonatype.org/service/local/staging/profiles/"${{ secrets.OSSRH_STAGING_PROFILE_ID }}"/start    --header 'Accept: application/json'    --header 'Content-Type: application/json'    --data '{ "data": {"description" : "'"${{ github.repository }}/${{ github.workflow }}#${{ github.run_number }}"'"} }' | jq -r '.data.stagedRepositoryId' `" >> $GITHUB_OUTPUT
+          echo "repository_id=`curl -s --request POST -u "${{ secrets.OSSRH_USERNAME}}:${{ secrets.OSSRH_PASSWORD }}"   --url https://s01.oss.sonatype.org/service/local/staging/profiles/"${{ secrets.OSSRH_STAGING_PROFILE_ID }}"/start    --header 'Accept: application/json'    --header 'Content-Type: application/json'    --data '{ "data": {"description" : "'"${{ github.repository }}/${{ github.workflow }}#${{ github.run_number }}"'"} }'`"
+          echo "repository_id=`curl -s --request POST -u "${{ secrets.OSSRH_USERNAME}}:${{ secrets.OSSRH_PASSWORD }}"   --url https://s01.oss.sonatype.org/service/local/staging/profiles/"${{ secrets.OSSRH_STAGING_PROFILE_ID }}"/start    --header 'Accept: application/json'    --header 'Content-Type: application/json'    --data '{ "data": {"description" : "'"${{ github.repository }}/${{ github.workflow }}#${{ github.run_number }}"'"} }' | jq -r '.data.stagedRepositoryId' `" >> $GITHUB_OUTPUT
 
   build_jar:
     name: 'build on ${{ matrix.os }}'
@@ -63,9 +63,7 @@ jobs:
       - name: rewrite build.gradle to require signing on Windows
         if: startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'windows')
         run: |
-          (Get-Content -ReadCount 0 rtmidi-javacpp\build.gradle) |
-            -replace "signing {}", "signing { sign(publishing.publications) }" |
-              Set-Content rtmidi-javacpp\build.gradle -WhatIf
+          (Get-Content -ReadCount 0 rtmidi-javacpp\build.gradle)  -replace "signing {}", "signing { sign(publishing.publications) }"    Set-Content rtmidi-javacpp\build.gradle -WhatIf
       - name: rewrite build.gradle to require signing on awkward OS
         if: startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'macos')
         run: sed -i "" "s/signing {}/signing { sign(publishing.publications) }/" rtmidi-javacpp/build.gradle
