--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -91,9 +91,9 @@ jobs:
         with:
           name: rtmidi-javacpp-jars
           path: rtmidi-javacpp/build/libs/*.jar
-        # Update API reference,
+      # Update API reference,
       - name: deploy to GitHub Pages
-        if: ${{ success() && startsWith(github.ref, 'refs/tags/') }}
+        if: success() && startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'ubuntu')
         uses: JamesIves/github-pages-deploy-action@4.1.2
         with:
           branch: gh-pages
