--- a/rtmidi-javacpp/build.gradle
+++ b/rtmidi-javacpp/build.gradle
@@ -134,8 +134,6 @@ def pomClosure = {
             email.set('atsushieno@gmail.com')
         }
     }
-    if (properties["stagedRepositoryIds"] == null)
-        properties["stagedRepositoryIds"] = "$ossrhStagingRepositoryId"
 }
 
 // publisher settings
@@ -158,7 +156,7 @@ publishing {
     repositories {
         maven {
             name = "OSSRH"
-            url = uri("https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/")
+            url = uri("https://s01.oss.sonatype.org/service/local/staging/profile_repositories/$ossrhStagedRepositoryIds/deploy/maven2/")
             credentials {
                 username = ossrhUsername
                 password = ossrhPassword
