--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,7 +12,8 @@ jobs:
     outputs:
       repository_id: ${{ steps.create.outputs.repository_id }}
     steps:
-      - name: create OSSRH Repository for aggregated pushes (ONLY FOR RELEASES)
+      - id: create
+        name: create OSSRH Repository for aggregated pushes (ONLY FOR RELEASES)
         if: startsWith(github.ref, 'refs/tags/')
         uses: nexus-actions/create-nexus-staging-repo@main
         with:
