GitHub Actions treats create_staging_repository output as secret, so uncover some

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,9 +17,9 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: nexus-actions/create-nexus-staging-repo@main
         with:
-          username: ${{ secrets.OSSRH_USERNAME }}
+          username: atsushieno
           password: ${{ secrets.OSSRH_PASSWORD }}
-          staging_profile_id: ${{ secrets.OSSRH_STAGING_PROFILE_ID }}
+          staging_profile_id: 1b92322eb8632e
           description: ${{ github.repository }}/${{ github.workflow }}#${{ github.run_number }}
           base_url: https://s01.oss.sonatype.org/service/local/
 
