--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -50,8 +50,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       # Only for release tags
-      - name: setup gpg necessities on Unix-y OS
-        if: startsWith(github.ref, 'refs/tags/') && !startsWith(matrix.os, 'windows')
+      - name: setup gpg necessities
+        if: startsWith(github.ref, 'refs/tags/')
+        shell: bash
         run: sudo bash -c "echo '$GPG_KEY_CONTENTS' | base64 -d > '$WORKSPACE/$SIGNING_SECRET_KEY_RING_FILE'"
         env:
           WORKSPACE: ${{ github.workspace }}
@@ -65,10 +66,6 @@ jobs:
           WORKSPACE: ${{ github.workspace }}
           GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
           SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
-      - name: rewrite build.gradle to require signing on Windows
-        if: false #startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'windows')
-        run: |
-          (Get-Content -ReadCount 0 rtmidi-javacpp\build.gradle) -replace "signing {}", "signing { sign(publishing.publications) }" | Set-Content rtmidi-javacpp\build.gradle -WhatIf
       - name: rewrite build.gradle to require signing on awkward OS
         if: startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'macos')
         run: sed -i "" "s/signing {}/signing { sign(publishing.publications) }/" rtmidi-javacpp/build.gradle
