--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -53,13 +53,13 @@ jobs:
       - name: setup gpg necessities
         if: startsWith(github.ref, 'refs/tags/')
         shell: bash
-        run: sudo bash -c "echo '$GPG_KEY_CONTENTS' | base64 -d > '$WORKSPACE/$SIGNING_SECRET_KEY_RING_FILE'"
+        run: echo '$GPG_KEY_CONTENTS' | base64 -d > '$WORKSPACE/$SIGNING_SECRET_KEY_RING_FILE'
         env:
           WORKSPACE: ${{ github.workspace }}
           GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
           SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
       - name: setup gpg necessities on Windows
-        if: startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'windows')
+        if: false #startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'windows')
         run: |
           [System.Text.Encoding]::Unicode.GetString([System.Convert]::FromBase64String("${{ secrets.GPG_KEY_CONTENTS }}")) | Out-File '${{ env.WORKSPACE }}/${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}'
         env:
