--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -53,11 +53,9 @@ jobs:
       - name: setup gpg necessities
         if: startsWith(github.ref, 'refs/tags/')
         shell: bash
-        run: echo '$GPG_KEY_CONTENTS' | base64 -d > '$WORKSPACE/$SIGNING_SECRET_KEY_RING_FILE'
-        env:
-          WORKSPACE: ${{ github.workspace }}
-          GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
-          SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
+        run: |
+          mkdir -p '${{ github.workspace }}'
+          echo '${{ secrets.GPG_KEY_CONTENTS }}' | base64 -d > '${{ github.workspace }}/${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}'
       - name: setup gpg necessities on Windows
         if: false #startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'windows')
         run: |
