remove arm64 build artifacts from javacppPlatform specs. Bump version to 0.1.2.

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,17 @@
 plugins {
-    id 'org.bytedeco.gradle-javacpp-build' version "1.5.8" apply false
-    id 'org.bytedeco.gradle-javacpp-platform' version '1.5.8' apply false
+    id 'org.bytedeco.gradle-javacpp-build' version "1.5.9" apply false
+    id 'org.bytedeco.gradle-javacpp-platform' version '1.5.9' apply false
     id 'org.jetbrains.dokka' version '1.8.10' apply false
 }
 
-group = 'dev.atsushieno'
-version = '0.1.0-SNAPSHOT'
+allprojects {
+    group = 'dev.atsushieno'
+    version = '0.1.2'
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+}
 
 apply from: "${rootDir}/publish-root.gradle"
