--- a/rtmidi-javacpp/build.gradle
+++ b/rtmidi-javacpp/build.gradle
@@ -6,14 +6,6 @@ plugins {
     id 'org.jetbrains.dokka'
 }
 
-group = 'dev.atsushieno'
-version = '0.1.1'
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
-
 ext.targetArtifactName = "dev.atsushieno:rtmidi-javacpp"
 
 configurations {
@@ -30,11 +22,11 @@ dependencies {
     api "org.bytedeco:javacpp:$javacppVersion"
     javacppPlatform "org.bytedeco:javacpp-platform:$javacppVersion"
     javacppPlatform "$targetArtifactName:$version:linux-x86_64"
-    javacppPlatform "$targetArtifactName:$version:linux-arm64"
+    //javacppPlatform "$targetArtifactName:$version:linux-arm64"
     javacppPlatform "$targetArtifactName:$version:macosx-x86_64"
-    javacppPlatform "$targetArtifactName:$version:macosx-arm64"
+    //javacppPlatform "$targetArtifactName:$version:macosx-arm64"
     javacppPlatform "$targetArtifactName:$version:windows-x86_64"
-    javacppPlatform "$targetArtifactName:$version:windows-arm64"
+    //javacppPlatform "$targetArtifactName:$version:windows-arm64"
     testRuntimeOnly "org.bytedeco:javacpp:1.5.8:$javacppPlatform"
     testImplementation platform('org.junit:junit-bom:5.9.1')
     //testImplementation 'org.junit.jupiter:junit-jupiter'
