To prevent publishing from submoduling project, add safeguard condition.

--- a/rtmidi-javacpp/build.gradle
+++ b/rtmidi-javacpp/build.gradle
@@ -131,6 +131,9 @@ def pomClosure = {
 // publisher settings
 publishing {
     publications {
+        if (!rootDir.list().contains("rtmidi-javacpp"))
+            return
+
         mavenJava(MavenPublication) {
             from components.java
             artifacts = [jar, javacppJar, javadocJar, sourcesJar] + javacppBuild.existingArtifacts(configurations.javacppPlatform)
