--- a/rtmidi-javacpp/build.gradle
+++ b/rtmidi-javacpp/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'org.bytedeco.gradle-javacpp-build'
     id 'maven-publish'
     id 'signing'
-    id 'org.jetbrains.dokka'
 }
 
 ext.targetArtifactName = "dev.atsushieno:rtmidi-javacpp"
@@ -27,7 +26,7 @@ dependencies {
     //javacppPlatform "$targetArtifactName:$version:macosx-arm64"
     javacppPlatform "$targetArtifactName:$version:windows-x86_64"
     //javacppPlatform "$targetArtifactName:$version:windows-arm64"
-    testRuntimeOnly "org.bytedeco:javacpp:1.5.8:$javacppPlatform"
+    testRuntimeOnly "org.bytedeco:javacpp:$javacppVersion:$javacppPlatform"
     testImplementation platform('org.junit:junit-bom:5.9.1')
     //testImplementation 'org.junit.jupiter:junit-jupiter'
 }
@@ -55,6 +54,7 @@ javacppBuildParser {
 
 javacppBuildCompiler {
     copyLibs = true
+    deleteJniFiles false
 }
 
 jar {
