--- a/samples/app/build.gradle
+++ b/samples/app/build.gradle
@@ -1,10 +1,7 @@
 plugins {
-    id 'java-library'
-    id 'org.bytedeco.gradle-javacpp-platform' version '1.5.8'
+    id 'application'
+    id 'org.bytedeco.gradle-javacpp-platform'
 }
-
-group = 'dev.atsushieno'
-version = '0.1.0'
 
 repositories {
     mavenLocal()
@@ -20,17 +17,17 @@ ext {
 }
 
 dependencies {
-    api "dev.atsushieno:rtmidi-javacpp-platform:0.1.0"
+    implementation "dev.atsushieno:rtmidi-javacpp-platform:+"
     testImplementation 'junit:junit:4.13.2'
 }
 
-/*
+mainClassName = "dev.atsushieno.rtmidi_javacpp_app.Main"
+
 // Let's create a standalone "uber JAR" to see what we get in it
 jar {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE // allow duplicates
-    manifest.attributes "Main-Class": "org.bytedeco.javacv.samples.Demo"
+    manifest.attributes "Main-Class": "dev.atsushieno.rtmidi_javacpp_app.Main"
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
-*/
