--- a/rtmidi-javacpp/build.gradle
+++ b/rtmidi-javacpp/build.gradle
@@ -7,6 +7,10 @@ plugins {
 
 ext.targetArtifactName = "dev.atsushieno:rtmidi-javacpp"
 
+configurations {
+    baseline
+}
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(11)
@@ -34,6 +38,7 @@ test {
 tasks.withType(org.bytedeco.gradle.javacpp.BuildTask).configureEach {
     includePath = ["$buildDir/$javacppPlatform/include"]
     linkPath = ["$buildDir/$javacppPlatform/lib"]
+    copyLibs true
 }
 
 if(System.properties["os.name"].startsWith("Windows")) {
@@ -69,9 +74,21 @@ javadoc {
     //from javadoc.destinationDir
 }
 
-java {
-    withJavadocJar()
-    withSourcesJar()
+tasks.register('javadocJar', Jar) {
+    dependsOn javadoc
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+tasks.register('sourcesJar', Jar) {
+    dependsOn classes
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar
+    archives sourcesJar
 }
 
 /*
@@ -114,6 +131,9 @@ def pomClosure = {
 // publisher settings
 publishing {
     publications {
+        if (!rootDir.list().contains("rtmidi-javacpp"))
+            return
+
         mavenJava(MavenPublication) {
             from components.java
             artifacts = [jar, javacppJar, javadocJar, sourcesJar] + javacppBuild.existingArtifacts(configurations.javacppPlatform)
@@ -139,11 +159,6 @@ publishing {
         }
     }
 }
-
-tasks.findByName('javacppBuildCommand').dependsOn('javacppPomProperties')
-tasks.findByName('javacppBuildCommand').dependsOn('sourcesJar')
-tasks.findByName('javacppBuildCommand').dependsOn('generatePomFileForMavenJavaPublication')
-tasks.findByName('javacppBuildCommand').dependsOn('generatePomFileForMavenJavacppPlatformPublication')
 
 // keep it as is. It is replaced by CI release builds
 signing {}
