--- a/rtmidi-javacpp/build.gradle
+++ b/rtmidi-javacpp/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     javacppPlatform "$targetArtifactName:$version:linux-arm64"
     javacppPlatform "$targetArtifactName:$version:macosx-x86_64"
     javacppPlatform "$targetArtifactName:$version:macosx-arm64"
-    javacppPlatform "$targetArtifactName:$version:windows-x86_64"
-    javacppPlatform "$targetArtifactName:$version:windows-arm64"
+    //javacppPlatform "$targetArtifactName:$version:windows-x86_64"
+    //javacppPlatform "$targetArtifactName:$version:windows-arm64"
     testRuntimeOnly "org.bytedeco:javacpp:$javacppVersion:$javacppPlatform"
     testImplementation platform('org.junit:junit-bom:5.9.1')
     //testImplementation 'org.junit.jupiter:junit-jupiter'
