--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -65,11 +65,11 @@ jobs:
           GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
           SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
       - name: rewrite build.gradle to require signing on awkward OS
-        if: startsWith(github.ref, 'refs/tags/') && startsWith(matrix.os, 'macos')
+        if: startsWith(github.ref, 'refs/tags/') && contains(matrix.os, 'macos')
         run: sed -i "" "s/signing {}/signing { sign(publishing.publications) }/" rtmidi-javacpp/build.gradle
       - name: rewrite build.gradle to require signing on standard OS
         shell: bash
-        if: startsWith(github.ref, 'refs/tags/') && !startsWith(matrix.os, 'macos')
+        if: startsWith(github.ref, 'refs/tags/') && !contains(matrix.os, 'macos')
         run: sed -i "s/signing {}/signing { sign(publishing.publications) }/" rtmidi-javacpp/build.gradle
 
       # build or publish, depending on whether it is for release tags or not
