--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, flyci-macos-large-latest-m1] #, windows-latest]
+        os: [ubuntu-22.04, macos-13, flyci-macos-large-latest-m1] #, windows-latest]
     steps:
       - name: checkout
         uses: actions/checkout@v4
